--- a/Visuals/Line Chart/Line Chart.ipynb
+++ b/Visuals/Line Chart/Line Chart.ipynb
@@ -2,25 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "8f38e7e7",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\nk619\\AppData\\Local\\Temp\\ipykernel_12284\\8502699.py:2: UserWarning: \n",
-      "The dash_core_components package is deprecated. Please replace\n",
-      "`import dash_core_components as dcc` with `from dash import dcc`\n",
-      "  import dash_core_components as dcc\n",
-      "C:\\Users\\nk619\\AppData\\Local\\Temp\\ipykernel_12284\\8502699.py:3: UserWarning: \n",
-      "The dash_html_components package is deprecated. Please replace\n",
-      "`import dash_html_components as html` with `from dash import html`\n",
-      "  import dash_html_components as html\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import dash\n",
     "import dash_core_components as dcc\n",
@@ -35,206 +20,10 @@
    "execution_count": null,
    "id": "50d701c5",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Dash is running on http://127.0.0.1:8050/\n",
-      "\n",
-      " * Serving Flask app '__main__'\n",
-      " * Debug mode: off\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING: This is a development server. Do not use it in a production deployment. Use a production WSGI server instead.\n",
-      " * Running on http://127.0.0.1:8050\n",
-      "Press CTRL+C to quit\n",
-      "127.0.0.1 - - [19/May/2023 14:27:49] \"GET / HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [19/May/2023 14:27:49] \"GET /_dash-layout HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [19/May/2023 14:27:49] \"GET /_dash-dependencies HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [19/May/2023 14:27:49] \"GET /_dash-component-suites/dash/dcc/async-slider.js HTTP/1.1\" 304 -\n",
-      "127.0.0.1 - - [19/May/2023 14:27:49] \"GET /_dash-component-suites/dash/dcc/async-graph.js HTTP/1.1\" 304 -\n",
-      "127.0.0.1 - - [19/May/2023 14:27:49] \"GET /_dash-component-suites/dash/dcc/async-plotlyjs.js HTTP/1.1\" 304 -\n",
-      "127.0.0.1 - - [19/May/2023 14:27:49] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [19/May/2023 14:28:02] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [19/May/2023 14:28:02] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [19/May/2023 14:28:02] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [19/May/2023 14:28:02] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [19/May/2023 14:28:02] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [19/May/2023 14:28:02] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [19/May/2023 14:28:02] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [19/May/2023 14:28:02] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [19/May/2023 14:28:02] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [19/May/2023 14:28:02] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [19/May/2023 14:28:03] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [19/May/2023 14:28:03] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [19/May/2023 14:28:03] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [19/May/2023 14:28:03] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [19/May/2023 14:28:03] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [19/May/2023 14:28:03] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [19/May/2023 14:28:03] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [19/May/2023 14:28:03] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [19/May/2023 14:28:03] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [19/May/2023 14:28:03] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [19/May/2023 14:28:03] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [19/May/2023 14:28:03] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [19/May/2023 14:28:03] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [19/May/2023 14:28:03] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [19/May/2023 14:28:03] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [19/May/2023 14:28:03] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [19/May/2023 14:28:03] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [19/May/2023 14:28:03] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [19/May/2023 14:28:03] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [19/May/2023 14:28:03] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [19/May/2023 14:28:03] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [19/May/2023 14:28:03] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [19/May/2023 14:28:03] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [19/May/2023 14:28:04] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [19/May/2023 14:28:04] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [19/May/2023 14:28:04] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [19/May/2023 14:28:04] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [19/May/2023 14:28:04] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [19/May/2023 14:28:04] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [19/May/2023 14:28:04] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [19/May/2023 14:28:04] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [19/May/2023 14:28:04] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [19/May/2023 14:28:04] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [19/May/2023 14:28:04] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [19/May/2023 14:28:04] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [19/May/2023 14:28:04] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [19/May/2023 14:28:04] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [19/May/2023 14:28:05] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [19/May/2023 14:28:05] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [19/May/2023 14:28:05] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [19/May/2023 14:28:05] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [19/May/2023 14:28:05] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [19/May/2023 14:28:05] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [19/May/2023 14:28:05] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [19/May/2023 14:28:05] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [19/May/2023 14:28:05] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [19/May/2023 14:28:05] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [19/May/2023 14:28:05] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [19/May/2023 14:28:05] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [19/May/2023 14:28:05] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [19/May/2023 14:28:05] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [19/May/2023 14:28:05] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [19/May/2023 14:28:05] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [19/May/2023 14:28:05] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [19/May/2023 14:28:05] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [19/May/2023 14:28:05] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [19/May/2023 14:28:05] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [19/May/2023 14:28:05] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [19/May/2023 14:28:05] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [19/May/2023 14:28:05] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [19/May/2023 14:28:05] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [19/May/2023 14:28:05] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [19/May/2023 14:28:05] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [19/May/2023 14:28:05] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [19/May/2023 14:28:05] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [19/May/2023 14:28:05] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [19/May/2023 14:28:05] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [19/May/2023 14:28:05] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [19/May/2023 14:28:06] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [19/May/2023 14:28:06] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [19/May/2023 14:28:06] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [19/May/2023 14:28:06] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [19/May/2023 14:28:06] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [19/May/2023 14:28:06] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [19/May/2023 14:28:06] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [19/May/2023 14:28:06] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [19/May/2023 14:28:06] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [19/May/2023 14:28:06] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [19/May/2023 14:28:06] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [19/May/2023 14:28:06] \"POST /_dash-update-component HTTP/1.1\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [19/May/2023 14:28:06] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [19/May/2023 14:28:06] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [19/May/2023 14:28:06] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [19/May/2023 14:28:06] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [19/May/2023 14:28:06] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [19/May/2023 14:28:06] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [19/May/2023 14:28:06] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [19/May/2023 14:28:06] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [19/May/2023 14:28:06] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [19/May/2023 14:28:06] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [19/May/2023 14:28:06] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [19/May/2023 14:28:06] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [19/May/2023 14:28:06] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [19/May/2023 14:28:06] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [19/May/2023 14:28:06] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [19/May/2023 14:28:06] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [19/May/2023 14:28:06] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [19/May/2023 14:28:06] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [19/May/2023 14:28:06] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [19/May/2023 14:28:06] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [19/May/2023 14:28:06] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [19/May/2023 14:28:06] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [19/May/2023 14:28:07] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [19/May/2023 14:28:07] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [19/May/2023 14:28:07] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [19/May/2023 14:28:07] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [19/May/2023 14:28:07] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [19/May/2023 14:28:07] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [19/May/2023 14:28:07] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [19/May/2023 14:28:07] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [19/May/2023 14:28:07] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [19/May/2023 14:28:07] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [19/May/2023 14:28:07] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [19/May/2023 14:28:07] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [19/May/2023 14:28:07] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [19/May/2023 14:28:07] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [19/May/2023 14:28:07] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [19/May/2023 14:28:07] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [19/May/2023 14:28:07] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [19/May/2023 14:28:07] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [19/May/2023 14:28:07] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [19/May/2023 14:28:07] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [19/May/2023 14:28:07] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [19/May/2023 14:28:07] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [19/May/2023 14:28:07] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [19/May/2023 14:28:07] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [19/May/2023 14:28:07] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [19/May/2023 14:28:07] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [19/May/2023 14:28:07] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [19/May/2023 14:28:07] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [19/May/2023 14:28:07] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [19/May/2023 14:28:07] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [19/May/2023 14:28:07] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [19/May/2023 14:28:07] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [19/May/2023 14:28:07] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [19/May/2023 14:28:07] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [19/May/2023 14:28:07] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [19/May/2023 14:28:07] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [19/May/2023 14:28:07] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [19/May/2023 14:28:07] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [19/May/2023 14:28:07] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [19/May/2023 14:28:07] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [19/May/2023 14:28:07] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [19/May/2023 14:28:07] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [19/May/2023 14:28:07] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [19/May/2023 14:28:07] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [19/May/2023 14:28:07] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [19/May/2023 14:28:07] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [19/May/2023 14:28:07] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [19/May/2023 14:28:07] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [19/May/2023 14:28:07] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [19/May/2023 14:28:08] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [19/May/2023 14:28:10] \"POST /_dash-update-component HTTP/1.1\" 200 -\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "netflix = pd.read_csv(r\"C:\\Users\\nk619\\Downloads\\Dash\\Netflix-in-plotly-dash-main\\netflix_titles.csv\")\n",
-    "netflix1 = pd.read_csv(r\"C:\\Users\\nk619\\Downloads\\Dash\\Netflix-in-plotly-dash-main\\netflix_titles.csv\")\n",
+    "netflix = pd.read_csv(r\"C:\\Users\\nk619\\Downloads\\Dash\\netflix_titles.csv\")\n",
+    "netflix1 = pd.read_csv(r\"C:\\Users\\nk619\\Downloads\\Dash\\netflix_titles.csv\")\n",
     "\n",
     "\n",
     "app = dash.Dash(__name__, meta_tags=[{\"name\": \"viewport\", \"content\": \"width=device-width\"}])\n",
